objects/Packlist__c.object
<CustomObject>
    <fields>
        <fullName>Count_Boxes__c</fullName>
        <label>Count - Boxes</label>
        <summaryForeignKey>Cvent_Box__c.Packlist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cvent_Warehouse__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cvent Warehouse</label>
        <referenceTo>Cvent_Warehouse__c</referenceTo>
        <relationshipLabel>Packlists</relationshipLabel>
        <relationshipName>Packlists</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Expected_Return__c</fullName>
        <label>Date - Expected Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shipment__c</fullName>
        <label>Date - Shipment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>International_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite_Hardware_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onsite Hardware Request</label>
        <referenceTo>Onsite_Hardware_Request__c</referenceTo>
        <relationshipLabel>Packlists</relationshipLabel>
        <relationshipName>Packlists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packlist_Status__c</fullName>
        <label>Packlist Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Being Packed</fullName>
                </value>
                <value>
                    <fullName>Packed</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <formula>IF(Cvent_Warehouse__r.Name = "3rd Party Warehouse", True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rental</label>
        <type>Checkbox</type>
    </fields>
    <label>Packlist</label>
    <nameField>
        <label>Packlist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packlists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cvent_Warehouse__c</columns>
        <columns>Date_Shipment__c</columns>
        <columns>International_Shipping__c</columns>
        <columns>Rental__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>